--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-flash-message": "^0.4.2",
     "react-native-gesture-handler": "^2.12.1",
     "react-native-indicators": "^0.17.0",
+    "react-native-linear-gradient": "^2.8.2",
     "react-native-localization": "^2.3.2",
     "react-native-reanimated": "^3.4.2",
     "react-native-safe-area-context": "^4.7.1",
