--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.19.2",
+    "@react-native-community/geolocation": "^3.0.6",
     "@react-native-firebase/app": "^18.3.0",
     "@react-native-firebase/messaging": "^18.3.0",
     "@react-navigation/bottom-tabs": "^6.5.8",
@@ -22,6 +23,7 @@
     "moment": "^2.29.4",
     "react": "18.2.0",
     "react-native": "0.72.4",
+    "react-native-awesome-slider": "^2.4.2",
     "react-native-confirmation-code-field": "^7.3.1",
     "react-native-country-picker-modal": "^2.0.0",
     "react-native-flash-message": "^0.4.2",
@@ -29,6 +31,7 @@
     "react-native-indicators": "^0.17.0",
     "react-native-linear-gradient": "^2.8.2",
     "react-native-localization": "^2.3.2",
+    "react-native-maps": "^1.7.1",
     "react-native-reanimated": "^3.4.2",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.24.0",
