--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
       android:icon="@mipmap/ic_launcher"
       android:roundIcon="@mipmap/ic_launcher_round"
       android:allowBackup="false"
+       android:usesCleartextTraffic="true"
       android:theme="@style/AppTheme">
       <activity
         android:name=".MainActivity"
@@ -24,6 +25,6 @@
       </activity>
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyA5YIsQjE2WqvzTncSmxUoK2jUJLy5P4JU"/>
+            android:value="AIzaSyBlwAfBiJCzvgRMzGipDYl7Eti0dnk4xIs"/>
     </application>
 </manifest>
