--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "react-native-confirmation-code-field": "^7.3.1",
     "react-native-country-picker-modal": "^2.0.0",
     "react-native-flash-message": "^0.4.2",
+    "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.12.1",
+    "react-native-google-places-autocomplete": "^2.5.1",
     "react-native-image-picker": "^5.6.1",
     "react-native-indicators": "^0.17.0",
     "react-native-linear-gradient": "^2.8.2",
@@ -47,6 +49,7 @@
     "@react-native/metro-config": "^0.72.11",
     "@tsconfig/react-native": "^3.0.0",
     "@types/react": "^18.0.24",
+    "@types/react-native-indicators": "^0.16.2",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
     "eslint": "^8.19.0",
