--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
     "moment": "^2.29.4",
+    "moment-timezone": "^0.5.43",
     "react": "18.2.0",
     "react-native": "0.72.4",
     "react-native-confirmation-code-field": "^7.3.1",
@@ -35,6 +36,7 @@
     "react-native-linear-gradient": "^2.8.2",
     "react-native-localization": "^2.3.2",
     "react-native-maps": "^1.7.1",
+    "react-native-maps-directions": "^1.9.0",
     "react-native-reanimated": "^3.4.2",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.24.0",
