--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "moment-timezone": "^0.5.43",
     "react": "18.2.0",
     "react-native": "0.72.4",
+    "react-native-android-location-enabler": "^1.2.2",
     "react-native-confirmation-code-field": "^7.3.1",
     "react-native-country-picker-modal": "^2.0.0",
     "react-native-flash-message": "^0.4.2",
