--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
+    "@material-ui/icons": "^4.11.3",
     "@mdi/js": "^7.2.96",
     "@react-native-async-storage/async-storage": "^1.19.0",
     "@react-native-firebase/app": "^18.1.0",
@@ -22,12 +23,13 @@
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
     "feather-icons": "^4.29.0",
+    "link": "^1.5.1",
     "moment": "^2.29.4",
     "react": "18.2.0",
-    "react-native": "0.72.1",
+    "react-native": "^0.72.3",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-flash-message": "^0.4.1",
-    "react-native-gesture-handler": "^2.12.0",
+    "react-native-gesture-handler": "^2.12.1",
     "react-native-image-crop-picker": "^0.40.0",
     "react-native-indicators": "^0.17.0",
     "react-native-localization": "^2.3.2",
