--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "react-native-android-location-enabler": "^1.2.2",
     "react-native-confirmation-code-field": "^7.3.1",
     "react-native-country-picker-modal": "^2.0.0",
+    "react-native-dropdown-picker": "^5.4.6",
+    "react-native-element-dropdown": "^2.10.0",
     "react-native-flash-message": "^0.4.2",
     "react-native-geocoding": "^0.5.0",
     "react-native-geolocation-service": "^5.3.1",
