--- a/package.json
+++ b/package.json
@@ -36,12 +36,15 @@
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.12.1",
     "react-native-google-places-autocomplete": "^2.5.1",
-    "react-native-image-picker": "^5.6.1",
+    "react-native-image-crop-picker": "^0.40.0",
+    "react-native-image-picker": "^5.7.0",
     "react-native-indicators": "^0.17.0",
     "react-native-linear-gradient": "^2.8.2",
     "react-native-localization": "^2.3.2",
     "react-native-maps": "^1.7.1",
     "react-native-maps-directions": "^1.9.0",
+    "react-native-paper": "^5.10.4",
+    "react-native-permissions": "^3.9.1",
     "react-native-reanimated": "^3.4.2",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.24.0",
