--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@invertase/react-native-apple-authentication": "^2.2.2",
+    "@notifee/react-native": "^7.8.0",
     "@react-native-async-storage/async-storage": "^1.19.2",
     "@react-native-community/geolocation": "^3.0.6",
     "@react-native-firebase/app": "^18.3.0",
